<resources>
    <string name="app_name">FakeApp</string>
    <string name="all_ed_email" translatable="false">Email</string>
    <string name="all_ed_pass_word" translatable="false">Mật khẩu</string>
    <string name="frag_login_text_forgot_pass_word">Quên mật khẩu?</string>
    <string name="frag_login_text_sign_in_google">Đăng nhập bằng Google</string>
    <string name="frag_login_text_sign_in_fb">Đăng nhập bằng Facebook</string>
    <string name="all_text_sign_up">Đăng ký</string>
    <string name="frag_login_text_sign_in">Đăng nhập</string>
    <string name="ed_full_name">Họ và tên</string>
    <string name="all_ed_phone_number">Số điện thoại</string>
    <string name="all_tv_rule">Bạn chưa đồng ý vói điều khoản sử dụng</string>
    <string name="all_text_recover_pass_word">Lấy lại mật khẩu</string>
    <string name="recover_pass_text_recover_mess">Vui lòng nhập địa chỉ email của
        bạn và chúng tôi sẽ gửi bạn đường dẫn khôi phục mật khẩu vào email</string>
    <string name="text_home_bar">Trang chủ</string>
    <string name="text_mess_bar">Tin nhắn</string>
    <string name="text_sell_bar">Đăng bán</string>
    <string name="text_search_bar">Tìm mua</string>
    <string name="text_account_bar">Tài khoản</string>
</resources>
