<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/all_image_logo" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/all_ed_email"
            android:singleLine="true"
            android:paddingStart="50dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_login"
            android:layout_gravity="center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingEnd="50dp">

        <EditText
            android:id="@+id/ed_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/all_ed_pass_word"
            android:inputType="textPassword"
            android:paddingStart="50dp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_pass_word"
            android:layout_gravity="center_vertical"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/all_border_text_view"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/all_text_sign_up"
            android:textColor="#EA485F"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/all_border_text_view"
            android:backgroundTint="#EA485F"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/frag_login_text_sign_in"
            android:textColor="#F0E9EB"
            android:textSize="19dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_in_fb"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/all_border_text_view"
        android:backgroundTint="#E2E2E2"
        android:drawableLeft="@drawable/all_icon_face_book"
        android:gravity="center"
        android:text="@string/frag_login_text_sign_in_fb"
        android:textColor="#EA485F"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/sign_in_google"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/all_border_text_view"
        android:backgroundTint="#E2E2E2"
        android:drawableLeft="@drawable/all_icon_google"
        android:gravity="center"
        android:text="@string/frag_login_text_sign_in_google"
        android:textColor="#EA485F"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_forgot_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/frag_login_text_forgot_pass_word" />
</LinearLayout>