<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">

    <ImageView
        android:id="@+id/iv_back_press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/all_icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_toRightOf="@id/iv_back_press"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/iv_back_press"
            android:gravity="center_horizontal"
            android:text="@string/all_text_recover_pass_word"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lines="3"
            android:text="@string/recover_pass_text_recover_mess"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_ed_email"
            android:layout_marginTop="20dp"
            android:textCursorDrawable="@null"
            android:theme="@style/AppTheme"
            android:id="@+id/ed_recover_mail"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="KHÔI PHỤC MẬT KHẨU"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="#252222"
            android:textColor="#FAF4F4"
            android:textSize="15dp"
            android:id="@+id/tv_execute_recover"/>
    </LinearLayout>

</RelativeLayout>


