<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_press"
        android:src="@drawable/all_icon_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_text_sign_up"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/ed_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ed_full_name"
            android:singleLine="true"
            android:paddingStart="50dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:textCursorDrawable="@null"
            android:theme="@style/AppTheme"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_login"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/all_ed_email"
            android:singleLine="true"
            android:paddingStart="50dp"
            android:padding="20dp"
            android:textCursorDrawable="@null"
            android:theme="@style/AppTheme"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/all_icon_email"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/all_ed_phone_number"
            android:inputType="phone"
            android:padding="20dp"
            android:paddingStart="50dp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:theme="@style/AppTheme"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/all_icon_call"
            android:layout_marginStart="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/ed_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/all_ed_pass_word"
            android:singleLine="true"
            android:paddingStart="50dp"
            android:padding="20dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:theme="@style/AppTheme"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_pass_word"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_tv_rule"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:textStyle="bold"
        android:text="@string/all_text_sign_up"
        android:background="@drawable/all_border_text_view"
        android:gravity="center"
        android:backgroundTint="#EA485F"
        android:textColor="#F0E9EB"
        android:textSize="19dp"
        android:id="@+id/tv_register"/>
</LinearLayout>